flapivor/tests/m1/hopix/parser/bad/10-lexer-constr-id-2.hopix
val x = Cons (0, Nil (1)